--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -174,6 +174,7 @@
      <Compile Include="Assets\Scripts\Player\soul_fly.cs" />
      <Compile Include="Assets\Scripts\Player\soul_get.cs" />
      <Compile Include="Assets\Scripts\Player\soul_push.cs" />
+     <Compile Include="Assets\Scripts\RandomSoul.cs" />
      <Compile Include="Assets\Scripts\Skill.cs" />
      <Compile Include="Assets\Scripts\UI\Finish\ComputeScore.cs" />
      <Compile Include="Assets\Scripts\UI\Finish\btnHome.cs" />
